<resources>
    <string name="app_name">API Example</string>
    <string name="app_id">5a7451222679214f668e7085</string>
    <string name="player_app_id">573449</string>
    <string name="title_quick_start">Quick start</string>
    <string name="title_multi_room">Multi-room</string>
    <string name="title_cross_room_pk">Cross-room PvP</string>
    <string name="title_raw_audio_data">Raw audio data</string>
    <string name="title_audio_mixing">Music mixing</string>
    <string name="title_voice_effect">Sound effects</string>
    <string name="title_picture_in_picture">Picture-in-picture</string>
    <string name="title_video_config">Video configuration</string>
    <string name="title_cdn_stream">Push to CDN</string>
    <string name="title_media_player">Media player</string>
    <string name="title_third_beauty">Third-party beauty effects</string>
    <string name="title_byte_beauty">BytePlus Effects</string>
    <string name="title_fu_beauty">Faceunity Effects</string>
    <string name="title_sei_msg">SEI message</string>
    <string name="title_stream_sync_info">Synchronize messages with frames</string>
    <string name="title_screen_share">Screen share</string>
    <string name="title_custom_audio_capture">Custom audio capture</string>
    <string name="button_join_room">Join the room</string>
    <string name="button_leave_room">Leave the room</string>
    <string name="hint_room_id">Room ID</string>
    <string name="hint_user_id">User id</string>
    <string name="label_mixing_file_title">Play local files</string>
    <string name="label_mixing_url_title">Play online files</string>
    <string name="label_mixing_music_title">Music mixing</string>
    <string name="button_confirm">OK</string>
    <string name="label_volume">Volume</string>
    <string name="label_progress">Progress</string>
    <string name="button_jump_time">Jump to</string>
    <string name="label_total_time_length">Total duration</string>
    <string name="label_total_time_length_xxx">Total duration: %1$d</string>
    <string name="label_mixing_file_label">File:</string>
    <string name="label_mixing_url_label">URL:</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="button_update">Update</string>
    <string name="button_preload">Preload</string>
    <string name="button_unload">Uninstall</string>
    <string name="button_play">Play</string>
    <string name="button_open">Open</string>
    <string name="label_all_effect_volume">All volume</string>
    <string name="button_pause_all">Pause all</string>
    <string name="button_resume_all">Resume all</string>
    <string name="button_stop_all">Stop all</string>
    <string name="toast_cdn_url_is_empty">CDN address is null</string>
    <string name="toast_message_is_empty">Message is null</string>
    <string name="toast_input_is_empty">Input is empty</string>
    <string name="toast_token_will_expire">Token will expire</string>
    <string name="toast_rtc_engine_not_created">RTC Engine not created</string>
    <string name="label_play_progress">Playback progress</string>
    <string name="label_play_progress_xxx">Playback progress: %1$d</string>
    <string name="label_set_progress">Set progress</string>
    <string name="hint_progress_ms">Progress (ms)</string>
    <string name="label_set_audio_track">Set Track</string>
    <string name="hint_audio_track">Track (0, 1)</string>
    <string name="label_pcm_mixing">PCM mixing</string>
    <string name="button_start_transcoding">Start</string>
    <string name="button_update_transcoding">Update</string>
    <string name="button_stop_transcoding">Stop</string>
    <string name="label_send_volume">Send volume</string>
    <string name="label_play_volume">Play volume</string>
    <string name="close">Close</string>
    <string name="button_open_float_window">Open the floating window</string>
    <string name="toast_no_float_window_permission">Permission for floating window not granted, unable to add floating window.</string>
    <string name="button_start_screen_sharing">Start sharing</string>
    <string name="button_stop_screen_sharing">Stop sharing</string>
    <string name="msg_sharing_low_os_version">Current os version is too low to support screen sharing</string>
    <string name="msg_sharing">Recording/sharing your screen</string>
    <string name="label_beauty_title">Beautify</string>
    <string name="label_beauty_intensity">Intensity</string>
    <string name="label_beauty_whiten_title">Whiten</string>
    <string name="label_beauty_smooth_title">Smooth</string>
    <string name="label_beauty_eye_title">Eyes resizing</string>
    <string name="label_beauty_overall_title">Face slimming</string>
    <string name="label_sticker_title">Stickers</string>
    <string name="label_sticker_cat_glasses">Black Cat Glasses</string>
    <string name="label_sticker_lucky_cat">Lucky Cat</string>
    <string name="label_sticker_bear">Love-starved bear</string>
    <string name="label_sticker_magic_gem">Magic Gem</string>
    <string name="label_sticker_tornado">Tornado</string>
    <string name="label_sticker_monkey_king">Monkey King</string>
    <string name="label_sticker_cartoon_face">Cartoon face</string>
    <string name="label_sticker_cute_pig">Cute pig</string>
    <string name="label_filter_title">Filters</string>
    <string name="label_filter_intensity">Intensity</string>
    <string name="label_filter_0603_title">Peach</string>
    <string name="label_filter_37l5_title">Crystal clear</string>
    <string name="label_filter_35l3_title">Dark night</string>
    <string name="label_filter_308_title">Cool</string>
    <string name="label_virtual_title">Background</string>
    <string name="label_virtual_color_title">Color</string>
    <string name="label_virtual_image_title">Picture</string>
    <string name="label_intensity">%s intensity</string>
    <string name="label_video_format">Video format</string>
    <string name="button_start_render">Start render</string>
    <string name="button_stop_render">Stop render</string>
    <string name="hint_cdn_url">CDN URL</string>
    <string name="label_background_color">Background color</string>
    <string name="label_cdn_layout_mode">Layout</string>
    <string name="hint_forward_to_room_id">Target room ID</string>
    <string name="button_start_push">Start push</string>
    <string name="button_stop_push">Stop push</string>
    <string name="label_video_type">Video type</string>
    <string name="toast_check_valid_false">Invalid input. Only numbers, uppercase and lowercase letters, \@. _ -, are supported, with a length of less than 128 characters.</string>
    <string name="hint_room_id_1">First room ID</string>
    <string name="hint_room_id_2">Second room ID</string>
    <string name="toast_join_room_failed">Join room failed</string>
    <string name="toast_url_empty">URL is empty</string>
    <string name="hint_pull_url">Pull URL</string>
    <string name="label_step_1_create_engine">Step1: Create the engine</string>
    <string name="button_create_engine">Create the engine</string>
    <string name="label_step_2_start_capture">Step2: Enable audio and video capture</string>
    <string name="button_start_capture">Enable capture</string>
    <string name="label_step_3_set_local_canvas">Step3: Set up local rendering</string>
    <string name="button_set_local_canvas">Set up local rendering</string>
    <string name="label_step_4_join_room">Step 4: Join the room</string>
    <string name="label_step_5_set_remote_canvas">Step5: Update the remote user\'s view</string>
    <string name="label_step_6_leave_room">Step6: Leave the room</string>
    <string name="label_step_7_destroy_room">Step7: Destroy the room</string>
    <string name="button_destroy_room">Destroy the room</string>
    <string name="label_step_8_destroy_engine">Step8: Destroy the engine</string>
    <string name="button_destroy_engine">Destroy the engine</string>
    <string name="label_audio_frame_callback">Audio frame callback</string>
    <string name="example_sei_messaging">SEI message</string>
    <string name="msg_empty_sei_message">SEI message is null</string>
    <string name="button_send">send</string>
    <string name="label_transcoding_messaging_title">Mixed stream layout</string>
    <string name="title_external_video_frame">Custom video capture</string>
    <string name="title_video_render">Custom video rendering</string>
    <string name="title_encode_video_frame">Custom video encoding</string>
    <string name="hint_message_content">Message content</string>
    <string name="button_send_message">Send message</string>
    <string name="label_render_settings">Render settings</string>
    <string name="label_local_render_mode">Local rendering mode</string>
    <string name="label_remote_render_mode">Remote rendering mode</string>
    <string name="label_local_mirror_type">Local video mirroring</string>
    <string name="label_encode_settings">Encoding parameter</string>
    <string name="label_encode_resolution">Resolution</string>
    <string name="label_encode_frame_rate">Frame rate</string>
    <string name="label_max_bitrate">Max bitrate</string>
    <string name="label_min_bitrate">Min bitrate</string>
    <string name="label_encoder_preference">Encoding strategy preference</string>
    <string name="button_update_encoder_config">Set up encoding configuration</string>
    <string name="label_capture_params">Capture parameters</string>
    <string name="label_capture_resolution">Resolution</string>
    <string name="label_capture_frame_rate">Frame rate</string>
    <string name="label_capture_preference">Mode</string>
    <string name="button_update_capture_config">Capture configuration</string>
    <string name="label_rotate_settings">Rotation settings</string>
    <string name="label_video_orientation">Video frame orientation</string>
    <string name="label_video_rotation_mode">Video rotation mode</string>
    <string name="button_add_watermark">WATERMARK</string>
    <string name="button_clear_watermark">CLEAR</string>
    <string name="toast_open_audio_effect_first">Please turn on the sound effect switch first</string>
    <string name="label_effect">Audio effects</string>
    <string name="label_voice_changer">Voice changer</string>
    <string name="label_voice_reverb">Reverb effects</string>
    <string name="label_voice_pitch">Key change</string>
    <string name="label_voice_equalization_title">Equalization effect</string>
    <string name="label_voice_equalization">Equalization effect</string>
    <string name="label_voice_gain">Band gain (dB)</string>
    <string name="label_voice_reverb_switch">Turn on reverb</string>
    <string name="label_room_size">Room size</string>
    <string name="label_decay_time">Tail length</string>
    <string name="label_damping">Attenuation damping level</string>
    <string name="label_wet_gain">Early reflection signal intensity</string>
    <string name="label_dry_gain">Original signal strength</string>
    <string name="label_pre_delay">Early reflection signal delay</string>
    <string name="label_ans_mode">Noise reduction mode</string>
    <string name="label_basic_function">Basic function</string>
    <string name="label_music_mix">Music mix</string>
    <string name="button_music_mix">Music mix</string>
    <string name="button_audio_mix">Audio effect mix</string>
    <string name="title_external_video_source">External video source</string>
    <string name="title_pull_stream">Pull stream</string>
    <string name="title_message_manager">Message manager</string>
    <string name="title_thrid_party_beauty">Third party beauty</string>
    <string name="title_important_component">Important component</string>
    <string name="title_video_manager">Video manager</string>
    <string name="title_audio_manager">Audio manager</string>
</resources>