<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".examples.QuickStartActivity"
    android:layout_marginHorizontal="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/local_view_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            />

        <FrameLayout
            android:id="@+id/remote_view_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_room_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/room_id_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/hint_room_id"
            android:textSize="14sp"
            android:paddingLeft="10dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_step_1_create_engine"/>

                <Button
                    android:id="@+id/btn_create_engine"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_create_engine"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_step_2_start_capture"/>

                <Button
                    android:id="@+id/btn_start_capture"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_start_capture"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_step_3_set_local_canvas"/>

                <Button
                    android:id="@+id/btn_set_local_view"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_set_local_canvas"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_step_4_join_room"/>

                <Button
                    android:id="@+id/btn_join_room"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_join_room"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_step_5_set_remote_canvas"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_step_6_leave_room"/>

                <Button
                    android:id="@+id/btn_leave_room"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_leave_room"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_step_7_destroy_room"/>

                <Button
                    android:id="@+id/btn_destroy_room"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_destroy_room"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_step_8_destroy_engine"/>

                <Button
                    android:id="@+id/btn_destroy_engine"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_destroy_engine"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>