<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".examples.CrossRoomPKActivity"
    android:layout_marginHorizontal="15dp">

    <FrameLayout
        android:id="@+id/local_view_container"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/transmit_room_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <EditText
            android:id="@+id/transmit_room_input"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/hint_forward_to_room_id"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_start_transmit"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/button_start" />

            <Button
                android:id="@+id/btn_stop_transmit"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_marginStart="2dp"
                android:text="@string/button_stop"/>

            <Button
                android:id="@+id/btn_pause_transmit"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_marginStart="2dp"
                android:text="@string/button_pause"/>

            <Button
                android:id="@+id/btn_resume_transmit"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_marginStart="2dp"
                android:text="@string/button_resume"/>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_room_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/transmit_room_layout"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/main_room_input"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/hint_room_id"
            android:paddingLeft="10dp"
            />
        <Button
            android:id="@+id/btn_join_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_join_room"
            android:layout_gravity="right" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>