<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".examples.mediaplayer.MediaPlayerActivity">

    <SurfaceView
        android:id="@+id/media_player_view"
        android:layout_width="match_parent"
        android:layout_height="220dp"/>

    <FrameLayout
        android:id="@+id/remote_view_container"
        android:layout_width="match_parent"
        android:layout_height="220dp"/>

    <LinearLayout
        android:id="@+id/main_room_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/room_id_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/hint_room_id"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_join_room"
            android:layout_gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/media_url_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:maxLines="1"
            android:hint="URL"
            android:text="https://agora-adc-artifacts.s3.cn-north-1.amazonaws.com.cn/resources/sample.mp4"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_open"
            android:layout_gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/position_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:maxLines="1"
            android:hint="@string/hint_progress_ms"
            android:inputType="number"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_seek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="seek_to"
            android:layout_gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_play"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_play"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pause"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_pause"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_stop"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_stop"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_publish"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_start_transcoding"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_unpublish"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/button_stop_transcoding"
            android:layout_weight="1.2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/label_send_volume"/>

        <SeekBar
            android:id="@+id/publish_volume_bar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="16dp"
            android:max="100"
            android:progress="100"/>
        <TextView
            android:id="@+id/publish_volume_text"
            android:layout_marginEnd="16dp"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="100" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/label_play_volume"/>

        <SeekBar
            android:id="@+id/play_volume_bar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="16dp"
            android:max="400"
            android:progress="100"/>
        <TextView
            android:id="@+id/play_volume_text"
            android:layout_marginEnd="16dp"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="100" />
    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>