<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    tools:context=".examples.CustomAudioCaptureActivity">

    <FrameLayout
        android:id="@+id/local_view_container"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        />

    <LinearLayout
        android:id="@+id/main_room_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/room_id_input"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/hint_room_id"
            android:paddingLeft="5dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/btn_join_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_join_room"
            android:layout_gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btn_start_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start_push"
            />

        <Button
            android:id="@+id/btn_stop_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/button_stop_push"
            />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>